force-app/main/default/objects/awduplicate2__awDCBatchDuplicate__c/awduplicate2__awDCBatchDuplicate__c.object-meta.xml
<CustomObject>
    <label>Duplicate Check Batch Duplicate</label>
    <nameField>
        <label>Duplicate Check Batch Duplicates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Duplicate Check Batch Duplicates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>