force-app/main/default/objects/awduplicate2__awDCBatchDuplicate__c/fields/awduplicate2__DuplicateCheckJob__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__DuplicateCheckJob__c</fullName>
    <label>Duplicate Check Job</label>
    <referenceTo>awduplicate2__awDCJob__c</referenceTo>
    <relationshipLabel>Duplicate Check Batch Duplicates</relationshipLabel>
    <relationshipName>Duplicate_Check_Batch_Duplicates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>