force-app/main/default/objects/awduplicate2__awDCBatchDuplicate__c/fields/awduplicate2__Group__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__Group__c</fullName>
    <externalId>true</externalId>
    <label>Group</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>