force-app/main/default/objects/awduplicate2__awDCBatchDuplicate__c/fields/awduplicate2__GroupName__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__GroupName__c</fullName>
    <externalId>true</externalId>
    <label>Group Name</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>