force-app/main/default/objects/awduplicate2__awDCBatchDuplicate__c/fields/awduplicate2__Handled__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__Handled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handled</label>
    <type>Checkbox</type>
</CustomField>