force-app/main/default/objects/awduplicate2__awDCBatchDuplicate__c/fields/awduplicate2__Number__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__Number__c</fullName>
    <label>Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>