force-app/main/default/objects/awduplicate2__awDCBatchDuplicate__c/fields/awduplicate2__ObjectA__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__ObjectA__c</fullName>
    <label>Object A</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>