force-app/main/default/objects/awduplicate2__awDCBatchDuplicate__c/fields/awduplicate2__ObjectRecordTypeB__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__ObjectRecordTypeB__c</fullName>
    <label>ObjectRecordTypeB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>