force-app/main/default/objects/awduplicate2__awDCBatchDuplicate__c/fields/awduplicate2__RecordA__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__RecordA__c</fullName>
    <label>Record A</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>