force-app/main/default/objects/awduplicate2__awDCBatchDuplicate__c/fields/awduplicate2__RecordB__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__RecordB__c</fullName>
    <label>Record B</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>