force-app/main/default/objects/awduplicate2__awDCBatchDuplicate__c/fields/awduplicate2__Score__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__Score__c</fullName>
    <label>Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>